--- a/asset/style/index.css
+++ b/asset/style/index.css
@@ -35,6 +35,17 @@ main {
   background-color: #fff;
 }
 
-h1 {
-  margin: 0 0 10px 0;
+img {
+  width: 100%;
 }
+
+header#app-header {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 300px;
+  background-color: red;
+  overflow: hidden;
+}
+
+
